# Multi-Lingual-Synthetic-Clinical-Notes

./: Input_ICSR.xlsx  README.md  data  pyproject.toml  requirements.txt  sample_data
src/synthnote_eval/: __init__.py  config.py
src/synthnote_eval/code_compiled.py/: code_compiled.py
src/synthnote_eval/metrics/: __init__.py  distribution.py  diversity.py  embeddings.py  medical_density.py  surface.py
src/synthnote_eval/utils/: text.py
